--- a/demo/gamelibrary2d-demo-splitscreen/pom.xml
+++ b/demo/gamelibrary2d-demo-splitscreen/pom.xml
@@ -6,12 +6,13 @@
 
     <groupId>com.gamelibrary2d.demo</groupId>
     <artifactId>gamelibrary2d-demo-splitscreen</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <maven.deploy.skip>true</maven.deploy.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -19,13 +20,13 @@
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
             <artifactId>gamelibrary2d-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
             <artifactId>gamelibrary2d-framework-lwjgl</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
