--- a/pom.xml
+++ b/pom.xml
@@ -6,26 +6,26 @@
  
   <groupId>com.gamelibrary2d</groupId>
   <artifactId>gamelibrary2d</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <modules>
     <module>modules/gamelibrary2d-common</module>
-	<module>modules/gamelibrary2d-collision</module>
-	<module>modules/gamelibrary2d-framework</module>
-	<module>modules/gamelibrary2d-framework-lwjgl</module>
-	<module>modules/gamelibrary2d-core</module>
-	<module>modules/gamelibrary2d-network-common</module>
-	<module>modules/gamelibrary2d-network</module>
-	<module>modules/gamelibrary2d-sound</module>
-	<module>modules/gamelibrary2d-util</module>
-	<module>tools/gamelibrary2d-tools-particlegenerator</module>
-	<module>demo/gamelibrary2d-demo-gifviewer</module>
-	<module>demo/gamelibrary2d-demo-shaderparticlesystem</module>
-	<module>demo/gamelibrary2d-demo-transparentwindow</module>
-	<module>demo/gamelibrary2d-demo-clientserver</module>
-	<module>demo/gamelibrary2d-demo-lightning</module>
-	<module>demo/gamelibrary2d-demo-splitscreen</module>
+	  <module>modules/gamelibrary2d-collision</module>
+	  <module>modules/gamelibrary2d-framework</module>
+	  <module>modules/gamelibrary2d-framework-lwjgl</module>
+	  <module>modules/gamelibrary2d-core</module>
+	  <module>modules/gamelibrary2d-network-common</module>
+	  <module>modules/gamelibrary2d-network</module>
+	  <module>modules/gamelibrary2d-sound</module>
+	  <module>modules/gamelibrary2d-util</module>
+	  <module>tools/gamelibrary2d-tools-particlegenerator</module>
+	  <module>demo/gamelibrary2d-demo-gifviewer</module>
+    <module>demo/gamelibrary2d-demo-shaderparticlesystem</module>
+	  <module>demo/gamelibrary2d-demo-transparentwindow</module>
+	  <module>demo/gamelibrary2d-demo-clientserver</module>
+	  <module>demo/gamelibrary2d-demo-lightning</module>
+	  <module>demo/gamelibrary2d-demo-splitscreen</module>
   </modules>
-  
+
 </project>
