--- a/demos/transparent-window-demo/pom.xml
+++ b/demos/transparent-window-demo/pom.xml
@@ -36,7 +36,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>${artifactId}</finalName>
+                    <finalName>${project.artifactId}</finalName>
                     <outputDirectory>${project.basedir}/../../jar/demos</outputDirectory>
                     <archive>
                         <manifest>
