--- a/tools/particle-generator/pom.xml
+++ b/tools/particle-generator/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.gamelibrary2d.tools</groupId>
     <artifactId>particle-generator</artifactId>
     <version>0.5.0</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
