--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	  <module>api/gamelibrary2d-util</module>
 	  <module>tools/particle-generator</module>
 	  <module>demos/gif-viewer-demo</module>
-	  <module>demos/geometry-demo</module>
+	  <module>demos/drawing-demo</module>
 	  <module>demos/particle-system-demo</module>
 	  <module>demos/shader-particle-system-demo</module>
 	  <module>demos/transparent-window-demo</module>
