--- a/api/gamelibrary2d-network/pom.xml
+++ b/api/gamelibrary2d-network/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gamelibrary2d</groupId>
-    <artifactId>gamelibrary2d-network</artifactId>
+    <artifactId>gamelibrary2d-network-common</artifactId>
     <version>0.12.0</version>
     <packaging>jar</packaging>
 
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
-            <artifactId>gamelibrary2d-network-common</artifactId>
+            <artifactId>gamelibrary2d-common</artifactId>
             <version>0.12.0</version>
             <scope>compile</scope>
         </dependency>
