--- a/api/gamelibrary2d-network/pom.xml
+++ b/api/gamelibrary2d-network/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gamelibrary2d</groupId>
-    <artifactId>gamelibrary2d-network-common</artifactId>
-    <version>0.12.0</version>
+    <artifactId>gamelibrary2d-network</artifactId>
+    <version>0.13.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
             <artifactId>gamelibrary2d-common</artifactId>
-            <version>0.12.0</version>
+            <version>0.13.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
