--- a/demos/network-demo/pom.xml
+++ b/demos/network-demo/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gamelibrary2d.demos</groupId>
     <artifactId>network-demo</artifactId>
-    <version>0.12.0</version>
+    <version>0.13.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -19,8 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
-            <artifactId>gamelibrary2d-network-common</artifactId>
-            <version>0.12.0</version>
+            <artifactId>gamelibrary2d-network</artifactId>
+            <version>0.13.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
