--- a/api/gamelibrary2d-core/pom.xml
+++ b/api/gamelibrary2d-core/pom.xml
@@ -28,10 +28,17 @@
         </dependency>
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
+            <artifactId>gamelibrary2d-network</artifactId>
+            <version>0.14.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.gamelibrary2d</groupId>
             <artifactId>gamelibrary2d-framework</artifactId>
             <version>0.14.0</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
     <build>
