--- a/demos/network-game-demo/pom.xml
+++ b/demos/network-game-demo/pom.xml
@@ -25,6 +25,12 @@
         </dependency>
         <dependency>
             <groupId>com.gamelibrary2d</groupId>
+            <artifactId>gamelibrary2d-network-server</artifactId>
+            <version>0.14.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.gamelibrary2d</groupId>
             <artifactId>gamelibrary2d-framework-lwjgl</artifactId>
             <version>0.14.0</version>
             <scope>compile</scope>
