--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>api/gamelibrary2d-sound</module>
         <module>api/gamelibrary2d-sound-lwjgl</module>
         <module>tools/particle-generator</module>
+        <module>tools/font-generator</module>
         <module>demos/animation-demo</module>
         <module>demos/drawing-demo</module>
         <module>demos/particle-system-demo</module>
