Update dependencies in android demo

--- a/demos/android-demo/app/build.gradle
+++ b/demos/android-demo/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+    namespace 'com.example.androiddemo'
+    compileSdkVersion 35
     defaultConfig {
         applicationId "com.example.androiddemo"
         minSdkVersion 28
-        targetSdkVersion 32
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -18,16 +18,16 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    namespace 'com.example.androiddemo'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(dir: '..\\..\\..\\jar\\api', include: ['*.jar'])
     implementation fileTree(dir: '..\\..\\..\\jar\\demos', include: ['network-game-demo-0.24.0.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.1.0'
 }
